--- a/HW4.qmd
+++ b/HW4.qmd
@@ -125,3 +125,43 @@ cat("Intracluster correlation (roh):", roh, "\n")
 Looking at the results of my analysis, I see a surprisingly high design effect of approximately 97.56. This means the variance from our cluster sampling approach is about 97 times larger than what we would expect from a simple random sample of the same size. This extremely large design effect translates to an intracluster correlation (roh) of about 11.50, which is unusual since roh typically ranges between 0 and 1. 
 
 This exceptionally high value suggests that there might be extreme homogeneity within clusters or, more likely, there's an issue with the calculations or data structure. In practical terms, this high roh value indicates that individuals within the same cluster are much more similar in their attitudes than individuals from different clusters. For survey design purposes, this would suggest that sampling fewer individuals within more clusters would be a much more efficient approach, though I would recommend double-checking these calculations given the unexpected magnitude of the values.
+
+## c) Estimate the variance if the sample size were tripled by tripling the number of primary stage cluster selections from 10 to 30.
+
+Now from the class notes, when increasing the number of clusters from n to n', the variance of the ratio estimate scales as:
+
+$$V_{new}(r) = \frac{n}{n'} \times V_{old}(r)$$
+
+Where:
+- $n = 10$ (original number of clusters)
+- $n' = 30$ (new number of clusters)
+- $V_{old}(r)$ is the original variance from part (a)
+
+Now the original variance from part (a): $$V_{original}(r) = 0.2330$$
+
+New variance with tripled clusters: $$V_{new}(r) = \frac{n}{n'} \times V_{original}(r) = \frac{10}{30} \times 0.2330 = \frac{1}{3} \times 0.2330 \approx 0.0777$$
+
+Variance reduction: $$\text{Reduction} = (1 - \frac{V_{new}(r)}{V_{original}(r)}) \times 100% = (1 - \frac{0.0777}{0.2330}) \times 100% = 66.67%$$
+
+
+```{r}
+n_original <- 10
+n_new <- 30  # tripled number of clusters
+
+# Original cluster variance from part (a)
+v_original <- v_cluster
+
+# Calculate new variance when tripling cluster selections
+v_new <- v_original * (n_original / n_new)
+
+# Print results
+cat("Original variance with 10 clusters:", v_original, "\n")
+cat("New variance with 30 clusters:", v_new, "\n")
+cat("Percent reduction in variance:", (1 - v_new/v_original) * 100, "%\n")
+```
+
+Based on my calculations, I found that increasing the number of clusters from 10 to 30 would substantially reduce the variance of our estimate. Specifically, the variance would decrease from about 0.233 to 0.078, which represents a 66.7% reduction. This significant improvement in precision makes sense given the high intracluster correlation as observed earlier. 
+
+In practical terms, this means that if we were to redesign the survey, we'd get much more reliable results by sampling more clusters rather than more individuals within each cluster. This finding reinforces a common principle in cluster sampling that when there's high homogeneity within clusters, it's more efficient to spread the sample across more clusters. For this particular attitude measure, tripling the number of clusters would give us estimates that are about three times more precise without having to increase the overall sample size.
+
+
